# deepagents

./: .gitignore  CLAUDE.md  README.md  deepagents.sh
.claude/: settings.json
.claude/docs/: deploy-114.md
.claude/skills/e2e-test/: SKILL.md
.claude/skills/sdd-review/: SKILL.md
backend/: .env.example  .gitignore  agent.py  langgraph.json  middlewares.py  prompts.py  pyproject.toml  server.py  tools.py  web_search.py
backend/data/skills/built-in/deep-research/: SKILL.md
backend/tests/: conftest.py  test_arch_invariants.py  test_db_url.py  test_routes.py  test_skill_whitelist.py  test_skills_routes.py  test_web_search.py
docs/: DeepAgents 前端开源项目调研.md  architecture.md  troubleshooting.md
docs/features/v0.2.0/001-skills-runtime/: spec.md
docs/features/v0.3.0/001-multi-format-export/: spec.md  tasks.md  verification.md
docs/features/v0.4.0/001-clarification-card/: spec.md  tasks.md  verification.md
docs/features/v0.5.0/001-langgraph-up-deployment/: spec.md  tasks.md  verification.md
docs/features/v0.5.0/002-fastapi-postgres-checkpointer/: spec.md  tasks.md  verification.md
docs/features/v0.6.0/001-skill-loading-whitelist/: spec.md  tasks.md
docs/prds/: skills.md
docs/prds/0.7.0/: file-upload.md
docs/reports/2026-05-26-deepagents-framework/: README.md  overview.drawio
docs/sdd/: SDD-Guide.md
docs/sdd/_templates/: spec.md  tasks.md  verification.md
frontend/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: research-card.spec.ts  skills-whitelist.spec.ts
frontend/e2e/fixtures/: research-card.ts  skills-whitelist.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: ChatInterface.tsx  ChatMessage.tsx  ConfigDialog.tsx  FileViewDialog.tsx  SkillsPopover.test.tsx  SkillsPopover.tsx  SubAgentIndicator.tsx  TasksFilesSidebar.tsx  ThreadList.tsx  ToolApprovalInterrupt.tsx  ToolCallBox.tsx
frontend/src/app/components/generative-ui/: ClarificationCard.tsx  ResearchCard.test.tsx  ResearchCard.tsx  registry.tsx
frontend/src/app/hooks/: useChat.ts  useDeleteThread.ts  useResumeInterrupt.tsx  useThreads.ts
frontend/src/app/types/: types.ts
frontend/src/components/ui/: popover.tsx
frontend/src/lib/: config.test.ts  config.ts
frontend/test/: setup.ts
scripts/: arch-guard.sh  deploy-to-114.sh
