[project]
name = "deep-research-backend"
version = "0.1.0"
description = "Deep Research agent backend (deepagents + DashScope OpenAI-compatible)."
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "ddgs>=9.0",
    "tavily-python>=0.5",
    "httpx>=0.27",
    "langgraph>=1.0",
    "langgraph-cli[inmem]>=0.1.50",
    "python-dotenv>=1.0",
    "pypandoc-binary>=1.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent", "tools", "prompts", "middlewares", "web_search"]
