[project]
name = "deep-research-backend"
version = "0.1.0"
description = "Deep Research agent backend (deepagents + DashScope OpenAI-compatible)."
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "ddgs>=9.0",
    "tavily-python>=0.5",
    "httpx>=0.27",
    "langgraph>=1.0",
    # 自研 FastAPI server (002 T2) + 持久化 saver
    # 详见 docs/features/v0.5.0/002-fastapi-postgres-checkpointer/spec.md
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langgraph-checkpoint-postgres>=3.1",
    "langgraph-checkpoint-sqlite>=2.1",
    # psycopg 3.x 默认是 pure Python,要么需要系统 libpq,要么需要 psycopg[binary] extra
    # 显式声明 binary wheel 让 pip 自动装(本地 / lab host / docker 内都 work)。
    # AsyncPostgresSaver 内部用 psycopg(不是 asyncpg)——SQLAlchemy URL `postgresql+asyncpg://`
    # 仅作客户端配置约定,server.py 的 _parse_db_url 会 strip 后缀。
    "psycopg[binary]>=3.0",
    "aiosqlite>=0.20",
    # langgraph-cli[inmem] 仅在 langgraph dev quick smoke 时需要,
    # 自研 server (server.py) 不依赖。保留为开发期辅助工具,改成 optional 也行。
    "langgraph-cli[inmem]>=0.1.50",
    "python-dotenv>=1.0",
    "pypandoc-binary>=1.13",
]

[project.optional-dependencies]
# SDD 三层测试的后端层(Test-First)。装法:pip install -e ".[test]"
# 详见 docs/sdd/SDD-Guide.md §5 测试模型。httpx 已在主依赖,FastAPI TestClient 现成可用。
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent", "tools", "prompts", "middlewares", "web_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]          # 让扁平 py-modules(server/agent/web_search…)可直接 import
asyncio_mode = "auto"
